contrução das rotas get e put, separando rotas no arquivo domains e limpando o app.js

--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -1,5 +1,8 @@
 @import "tailwindcss";
 
 @theme {
-  --color-prymary-400: #FF385C; 
+  --color-prymary-400: #FF385C;
+  --font-hashbnb: 
+  Airbnb Cereal VF, Circular, -apple-system, BlinkMacSystemFont, Roboto,
+  Helvetica Neue, sans-serif
 }
